# Ranoparse

./: .gitignore  README.md  app.py  bridge.py  config.txt  init.py  pyproject.toml
.devcontainer/: devcontainer.json
src/: helpers.py  parse.py
